--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,41 +7,29 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <LinearLayout
+    <RadioGroup
             android:id="@+id/options_layout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
             android:layout_alignParentBottom="true">
 
-        <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center_vertical"
-                android:gravity="center"
+        <RadioButton
+                style="@style/RdoBtnTheme"
                 android:onClick="setPenModel"
                 android:text="画笔"/>
 
-        <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center_vertical"
-                android:gravity="center"
+        <RadioButton
+                style="@style/RdoBtnTheme"
                 android:onClick="setEraseModel"
                 android:text="橡皮擦"/>
 
-        <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center_vertical"
-                android:gravity="center"
+        <RadioButton
+                style="@style/RdoBtnTheme"
                 android:onClick="clearCanvas"
                 android:text="清空"/>
 
-    </LinearLayout>
+    </RadioGroup>
 
     <com.wei.painting.view.PaintView
             android:id="@+id/view_paint"
