--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable name="owner" type="com.wei.painting.MainActivity"/>
 
-    <RadioGroup
-            android:id="@+id/options_layout"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:layout_alignParentBottom="true">
-
-        <RadioButton
-                style="@style/RdoBtnTheme"
-                android:onClick="setPenModel"
-                android:text="画笔"/>
-
-        <RadioButton
-                style="@style/RdoBtnTheme"
-                android:onClick="setEraseModel"
-                android:text="橡皮擦"/>
-
-        <RadioButton
-                style="@style/RdoBtnTheme"
-                android:onClick="clearCanvas"
-                android:text="清空"/>
-
-    </RadioGroup>
-
-    <com.wei.painting.view.PaintView
-            android:id="@+id/view_paint"
+    </data>
+    <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/options_layout"/>
+            tools:context=".MainActivity">
 
-</RelativeLayout>
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:orientation="vertical">
+
+            <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:textSize="20dp"
+                    android:gravity="center"
+                    android:onClick="@{() -> owner.paint()}"
+                    android:text="画画"/>
+
+            <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:textSize="20dp"
+                    android:gravity="center"
+                    android:text="拼图"/>
+
+            <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:textSize="20dp"
+                    android:gravity="center"
+                    android:text="涂鸦"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+</layout>
