--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,8 @@
                     android:layout_height="50dp"
                     android:textSize="20dp"
                     android:gravity="center"
-                    android:text="拼图"/>
+                    android:onClick="@{() -> owner.video()}"
+                    android:text="视频"/>
 
             <TextView
                     android:layout_width="200dp"
