--- a/app/src/main/res/layout/activity_painting.xml
+++ b/app/src/main/res/layout/activity_painting.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="owner" type="com.wei.painting.PaintActivity"/>
+        <variable name="owner" type="com.wei.painting.activity.PaintActivity"/>
     </data>
 
     <RelativeLayout
