--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable name="owner" type="com.wei.painting.MainActivity"/>
 
@@ -8,7 +8,8 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MainActivity">
+            tools:context=".MainActivity"
+            android:background="@drawable/ic_paint_bg">
 
         <LinearLayout
                 android:layout_width="wrap_content"
@@ -21,7 +22,9 @@
                     android:layout_height="50dp"
                     android:textSize="20dp"
                     android:gravity="center"
+                    android:textColor="@color/color_c01f0a"
                     android:onClick="@{() -> owner.paint()}"
+                    android:background="@drawable/selector_gradient_orange_item"
                     android:text="画画"/>
 
             <TextView
@@ -29,6 +32,10 @@
                     android:layout_height="50dp"
                     android:textSize="20dp"
                     android:gravity="center"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/selector_gradient_blue_item"
                     android:onClick="@{() -> owner.video()}"
                     android:text="视频"/>
 
@@ -37,6 +44,7 @@
                     android:layout_height="50dp"
                     android:textSize="20dp"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:text="涂鸦"/>
 
         </LinearLayout>
